k8s/production/api-deployment-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infigrate-api
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: api
          imagePullPolicy: Always
