k8s/production/queue-storage-patch.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        resources:
          requests:
            storage: 5Gi
