k8s/production/api-gateway-patch.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: infigrate-gateway
spec:
  gatewayClassName: infigrate-production-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: api.infigrate.local
      allowedRoutes:
        namespaces:
          from: Same
